--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,7 @@
           "builder": "@angular/build:application",
           "options": {
             "browser": "src/main.ts",
+            "outputPath": "dist/flavored-house-portal",
             "polyfills": [
               "zone.js",
               "@angular/localize/init"
